src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Grant_Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Award</label>
        <referenceTo>Grant_Award__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant_Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Programme</label>
        <referenceTo>Programme__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant_Scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Scheme</label>
        <referenceTo>Grant_Scheme__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the related organisation record to be amended or deleted</description>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>At_least_one_related_record_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT( $Setup.Bypass__c.Validation_Rules__c )
 , OR(
  ISPICKVAL( Type, &apos;Amend Record(s)&apos;)
  , ISPICKVAL( Type, &apos;Delete Record(s)&apos;)
 )
 , ISNULL( Grant_Award__c )
 , ISNULL( Grant_Scheme__c )
 , ISNULL(  Grant_Programme__c )
 , ISNULL( Organisation__c )
)</errorConditionFormula>
        <errorMessage>You need to provide at least one related record for this type.</errorMessage>
    </validationRules>
</CustomObject>